# Parallel-Mean-Shift-CUDA

./: .gitignore  CMakeLists.txt  README.md  main.cu
Presentazione/: Presentazione_Mean_Shift.tex
Relazione/: Relazione_Parallel_Mean_Shift.tex
cpp_sources/: CMakeLists.txt  distance.cpp  matrix_meanshift.cpp  rgb_pixels.cpp  soa_meanshift.cpp  source.cpp
cuda_sources/: CMakeLists.txt  color_converter.cu  distance.cu  errors.cu  matrix_meanshift_cuda.cu  matrix_meanshift_cuda_copy.cu  soa_meanshift_cuda.cu  source.cu
img/: balloons_100.ppm  balloons_1000.ppm  balloons_110.ppm  balloons_120.ppm  balloons_130.ppm  balloons_140.ppm  balloons_150.ppm  balloons_160.ppm  balloons_170.ppm  balloons_180.ppm  balloons_190.ppm  balloons_200.ppm  balloons_210.ppm  balloons_220.ppm  balloons_230.ppm  balloons_240.ppm  balloons_250.ppm  balloons_50.ppm  balloons_500.ppm  balloons_60.ppm  balloons_70.ppm  balloons_80.ppm  balloons_90.ppm  image.ppm  image_bigger.ppm  image_bigger_out.ppm  image_out.ppm  mele.ppm  mele_out.ppm  out.ppm
